--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="ru">
 <head>
   <title>Тест рамки</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
+      padding: 15px;
       margin: 0;
     }
 
@@ -15,6 +18,7 @@
     input {
       min-width: 280px;
       padding: 4px;
+      box-sizing: border-box;
       font: inherit;
     }
 
@@ -65,6 +69,10 @@
     </div>
     <div>
       <div class="preview">
+        <div class="border" :style="border_style"></div>
+        <img :src="image_url">
+      </div>
+      <div class="preview" style="max-width: 235px">
         <div class="border" :style="border_style"></div>
         <img :src="image_url">
       </div>
